lagt til displayt

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div></div>
-        <div class="knapper">
+        <div class="calc">
+
             <div class="row-container">
+                
+                <div class="display">
+                    <input type="text" id="result" readonly>
+                </div> 
+
                 <div class="row1">
 
                     <div id="knapp1">
