prøvd, men ikke fått til enda

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
             <div class="row-container">
                 
-                <div class="display">
-                    <input type="text" id="result" readonly>
-                </div> 
+                <input type="text" id="textInput" readonly>
+                    <p id="displayArea"></p>
 
                 <div class="row1">
 
